--- a/css/login_modal.css
+++ b/css/login_modal.css
@@ -4,9 +4,18 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 9999;
 	display: none;
+}
+
+.modal__overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.5;
+	z-index: -1;
 }
 
 .modal__container.is-open {
