--- a/css/spotlight.css
+++ b/css/spotlight.css
@@ -1,5 +1,6 @@
 .spotlight {
 	height: 100vh;
+	min-height: 80rem;
 	background-image: url(../media/live-sports-small.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -10,7 +11,7 @@
 
 .spotlight__content {
 	text-align: center;
-	padding: 0 8rem;
+	padding: 0 2rem;
 }
 
 .spotlight__header {
